--- a/Flask_template/templates/graphs.html
+++ b/Flask_template/templates/graphs.html
@@ -57,7 +57,7 @@
                     <button class="btn btn-outline-primary btn-sm" id="Body" onclick="content_body();">Body</button>
                 </div>
             </div>
-            <legend class='border-bottom h6'>{{name}} angles for right and left {{body}}</legend>
+            <legend class='border-bottom h6'>{{name}}'s right and left arm throughout the stroke</legend>
             <div class="container" id="content_legs">
                 <canvas id="myChart" max-width="300" max-height="300"></canvas>
             </div>
@@ -80,7 +80,7 @@
                     <button class="btn btn-outline-primary btn-sm" id="Body_user" onclick="content_body_user();">Body</button>
                 </div>
             </div>
-            <legend class='border-bottom h6'>Your angles for right and left {{body}}</legend>
+            <legend class='border-bottom h6'>Your right and left angles throughout the stroke</legend>
             <div class="container" id="content_legs_user">
                 <canvas id="myChart4" max-width="300" max-height="300"></canvas>
             </div>
@@ -159,7 +159,13 @@
                 <div>
                     <h5>Body:</h5>
                     <ul>
-                        
+                        {% for tip in body_tips %}
+                        {% if '!' in tip  %}
+                        <li class=mt-2 style="color: green;"><i class="fas fa-check-circle"></i> {{tip}}</li>
+                        {% elif '!' not in tip  %}
+                        <li class=mt-2 style="color: red;"><i class="fas fa-times-circle"></i> {{tip}}</li>
+                        {% endif %}
+                        {% endfor %}
                     </ul>
                 </div>
                 </div> 
