--- a/Flask_template/templates/home.html
+++ b/Flask_template/templates/home.html
@@ -1,4 +1,4 @@
-l{% extends 'layout.html' %}
+{% extends 'layout.html' %}
 
 {% block body %}
 <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
@@ -39,8 +39,40 @@ l{% extends 'layout.html' %}
 </div>
 <div class="container-fluid">
 <br>
+<div class='container-fluid home shadow rounded p-2 mb-3 text-center'>
+  <div class="container text-center">
+    <h3>Average Score: <strong>66</strong></h3>
+  </div>
+  <br>
+  <br>
+
+  <div class="container text-center">
+    <h3>Most Recent:</h3>
+    <div class="row">
+      <div class="col-md-3">
+      
+      </div>
+      <div class="col-md-2">
+        <p>Date: <strong>07/07/2021</strong></p>
+  
+      </div>
+      <div class="col-md-2">
+        <p>Professional Comparison: <strong>Djokovic</strong></p>
+  
+      </div>
+      <div class="col-md-2">
+        <p>Score: <strong>77</strong></p>
+  
+      </div>
+      <div class="col-md-3">
+        
+      </div>
+    </div>
+  
+  </div>
+</div>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-3">
         <div class="container rounded home shadow pt-2">
             <a class="btn btn-primary btn-xl text-uppercase d-flex justify-content-center" href="">Hawkeye</a>
             <br>
@@ -49,19 +81,20 @@ l{% extends 'layout.html' %}
         </div>
         <br>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-6">
         <div class="container rounded home shadow pt-2">
-            <a class="btn btn-primary btn-xl text-uppercase d-flex justify-content-center" href="{{ url_for('point') }}">Point Analysis</a>
+            <a class="btn btn-primary btn-xl text-uppercase d-flex justify-content-center" href="{{ url_for('stroke') }}">Stroke Analysis</a>
+
             <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatem deserunt blanditiis soluta et odio quod eum 
               inventore ad atque pariatur nam, repellendus fuga ducimus debitis necessitatibus nulla perferendis ipsa.</p>
         </div>
         <br>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
         <div class="container rounded home shadow pt-2">
-            <a class="btn btn-primary btn-xl text-uppercase d-flex justify-content-center" href="{{ url_for('stroke') }}">Stroke Analysis</a>
-            <br>
+          <a class="btn btn-primary btn-xl text-uppercase d-flex justify-content-center" href="{{ url_for('point') }}">Point Analysis</a>
+          <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatem deserunt blanditiis soluta et odio quod eum 
               inventore ad atque pariatur nam, repellendus fuga ducimus debitis necessitatibus nulla perferendis ipsa.</p>
         </div>
