--- a/Flask_template/templates/graphs.html
+++ b/Flask_template/templates/graphs.html
@@ -120,6 +120,9 @@
 
     <div class="row">
         <div class="col-md-12 pr-5 pl-5">
+            <div class="container-fluid text-center p-2">
+                <button type="submit" class="btn btn-secondary btn-sm rounded" id="scoring_criteria" data-toggle="modal" data-target="#exampleModal3" >Scoring Criteria</button>
+            </div>
             <div class='container-fluid text-center mt-3 border rounded'>
                 <h1>{{score}}/100</h1>
                 <p>Score</p>
@@ -129,7 +132,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="container-fluid text-center p-2">
-                <button type="submit" class="btn btn-secondary btn-sm rounded" id="scoring_criteria" data-toggle="modal" data-target="#exampleModal3" >Scoring Criteria</button>
+                <button type="submit" class="btn btn-primary btn-large rounded" id="save_score" >Save Score</button>
             </div>
             <div class='container mt-3'> 
                 <div>
