--- a/Flask_template/templates/stroke.html
+++ b/Flask_template/templates/stroke.html
@@ -75,6 +75,9 @@
           </div>
           <button type="submit" class="btn btn-primary" id="stroke_submit" onclick="loading();">Submit</button>
         </form>
+        <br>
+        <p class='text-center' style="color: red;">*Please do not refresh page when results are generated. Doing so will duplicate your results.<br>
+        </p>
       </div>
       <!-- Loading bar -->
       <div class='container-fluid text-center mt-5' id="loading" style="display:none"></div>
