--- a/Flask_template/templates/home.html
+++ b/Flask_template/templates/home.html
@@ -40,6 +40,11 @@
 <div class="container-fluid">
 <br>
 <div class='container-fluid home shadow rounded p-2 mb-3 text-center'>
+  {% if recent == 'none' %}
+    <h3 class="text-center">You have not tried the stroke analysis tool yet.<br>  See below to test it out!</h3>
+  
+  {% else %}
+  
   <div class="container text-center">
     <h3>Average Score: <strong>{{average}}</strong></h3>
   </div>
@@ -48,6 +53,7 @@
 
   <div class="container text-center">
     <h3>Most Recent:</h3>
+    
     <div class="row">
       <div class="col-md-3">
       
@@ -63,7 +69,7 @@
       <div class="col-md-2">
         <p>Score: <br><strong>{{score}} {% if '-' in difference %}
           <i style='color:red' class="fa fa-arrow-circle-down" aria-hidden="true"></i> 
-          {% elif expression2 %}
+          {% elif '+' in difference %}
             <i style='color:green' class="fa fa-arrow-circle-up" aria-hidden="true"></i>
         {% endif %}
          </strong></p>
@@ -75,6 +81,8 @@
     </div>
   
   </div>
+  {% endif %}
+
 </div>
 <div class="row">
 
