--- a/Flask_template/templates/home.html
+++ b/Flask_template/templates/home.html
@@ -39,9 +39,9 @@
 </div>
 <div class="container-fluid">
 <br>
-<div class='container-fluid home shadow rounded p-2 mb-3 text-center'>
+<div style='min-height:200px !important;' class='container-fluid home shadow rounded p-2 mb-3 text-center'>
   {% if recent == 'none' %}
-    <h3 class="text-center">You have not tried the stroke analysis tool yet.<br>  See below to test it out!</h3>
+    <h3 class="text-center mt-5">You have not tried the stroke analysis tool yet.<br>  See below to test it out!</h3>
   
   {% else %}
   
